force-app/main/default/objects/Fugado__c/Fugado__c.object-meta.xml
<CustomObject>
    <description>Objeto que almacena los productos fugados por cliente (productos que se dejaron de comprar)</description>
    <label>Fugado</label>
    <nameField>
        <displayFormat>F-{00000}</displayFormat>
        <label>Nombre de Fugado</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fugados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>