force-app/main/default/objects/Fugado__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Relación con la cuenta del producto fugado</description>
    <inlineHelpText>Cuenta de cliente con productos fugados</inlineHelpText>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fugados</relationshipLabel>
    <relationshipName>Fugados</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>