force-app/main/default/objects/Fugado__c/fields/Comentarios__c.field-meta.xml
<CustomField>
    <fullName>Comentarios__c</fullName>
    <description>Comentario para complementar motivo de fuga de producto</description>
    <label>Comentarios</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>