force-app/main/default/objects/Fugado__c/fields/Fecha_Registro__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Registro__c</fullName>
    <label>Fecha Registro</label>
    <type>DateTime</type>
</CustomField>