force-app/main/default/objects/Fugado__c/fields/Fecha_Sugerencia__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Sugerencia__c</fullName>
    <label>Fecha Sugerencia</label>
    <type>Date</type>
</CustomField>