force-app/main/default/objects/Fugado__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Precio elevado</fullName>
            </value>
            <value>
                <fullName>Fecha especial</fullName>
            </value>
            <value>
                <fullName>Calidad / insatisfacción con producto</fullName>
            </value>
            <value>
                <fullName>Cambio de proveedor o marca</fullName>
            </value>
            <value>
                <fullName>Baja demanda / cierre temporal</fullName>
            </value>
            <value>
                <fullName>Producto descontinuado o sin stock</fullName>
            </value>
            <value>
                <fullName>Promoción o compra puntual</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>