force-app/main/default/objects/Fugado__c/fields/No_Volver_a_Sugerir__c.field-meta.xml
<CustomField>
    <fullName>No_Volver_a_Sugerir__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Volver a Sugerir</label>
    <type>Checkbox</type>
</CustomField>