force-app/main/default/objects/Fugado__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Producto Fugado</description>
    <inlineHelpText>Producto Fugado</inlineHelpText>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Fugados</relationshipLabel>
    <relationshipName>Fugados</relationshipName>
    <type>Lookup</type>
</CustomField>